--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="glass-container large">
-        <div class="profile-picture-container">
-            <img src="https://i.postimg.cc/fynPCzwW/img-1-1717419133765.webp" alt="Profile Picture" class="profile-picture">
-        </div>
+    <div class="profile-container">
+        <img src="https://i.postimg.cc/fynPCzwW/img-1-1717419133765.webp" alt="Profile Picture" class="profile-picture">
+    </div>
         <div class="glass-content">
             <h1>About Me</h1>
             <p>Welcome to my personal webpage! I'm Shahariar Mahfuz, passionate about the mysteries of sleep and undiscovered knowledge. Join me on a journey of exploration and enlightenment</p>
